--- a/mymwebsite/templates/videos.html
+++ b/mymwebsite/templates/videos.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1 class="mt-5 mb-5 ml-4">{% trans "Videos" %}</h1>
     <hr>
-    <h4>{% trans "Explainer Video" %}</h4>
+    <h4 class="ml-4">{% trans "Explainer Video" %}</h4>
     <p></p>
     <div id="videosviewexplainer">
         <div class="d-flex align-content-start flex-wrap">
@@ -35,7 +35,7 @@
     </div>
     <p></p>
     <hr>
-    <h4>{% trans "Mobile App Videos" %}</h4>
+    <h4 class="ml-4">{% trans "Mobile App Videos" %}</h4>
     <p></p>
     <div id="videosviewmobapp">
         <div class="d-flex align-content-start flex-wrap">
@@ -132,7 +132,7 @@
     <p></p>
     <p></p>
     <hr>
-    <h4>{% trans "Web App Videos" %}</h4>
+    <h4 class="ml-4">{% trans "Web App Videos" %}</h4>
     <p></p>
     <div id="videosviewwebapp">
         <div class="d-flex align-content-start flex-wrap">
