--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -45,7 +45,7 @@
                     {% trans "When using our webapp, you can do it manually " %}<a
                         href="https://app.mymensor.com/vpdetail/" class="text-primary">{% trans "(See here.)" %}</a>
                     <p></p>
-                    {% trans "Or you can automatically share your captures to Twitter, Facebook or email " %}<a
+                    {% trans "Or you can automatically share your captures to Twitter or email " %}<a
                         href="https://app.mymensor.com/vpsetup/"
                         class="text-primary">{% trans "(Configure here.)" %}</a>
                 </div>
@@ -536,9 +536,9 @@
             </div>
             <div id="collapse30" class="collapse" role="tabpanel" aria-labelledby="heading30">
                 <div class="card-block ml-4">
-                    {% trans "Yes, once you have entered our Web App with your credentials, click on the logged in item and set up facebook, twitter accounts that you want to use to automatically share your media." %}
+                    {% trans "Yes, once you have entered our Web App with your credentials, click on the logged in item and set up the Twitter account that you want to use to automatically share your media." %}
                     {% trans "Then go to the Setup menu item and select the VPs item. You must check the share box in each of the VP folders that you want to share automatically." %}
-                    {% trans "In this same screen you can also select an email to automatically receive the captured media. Unlike Facebook and Twitter, emails accounts may be different for each VP." %}
+                    {% trans "In this same screen you can also select an email to automatically receive the captured media. Unlike Twitter account, emails accounts may be different for each VP." %}
                 </div>
             </div>
         </div>
