--- a/mymwebsite/templates/download.html
+++ b/mymwebsite/templates/download.html
@@ -3,7 +3,7 @@
 {% get_current_language as LANGUAGE_CODE %}
 {% block title %}{% trans "Download" %} - {{ block.super }}{% endblock %}
 {% block content %}
-    <h3>{% trans "Download MyMensorAR Mobile App" %}</h3>
+    <h3 class="mt-5">{% trans "Download MyMensorAR Mobile App" %}</h3>
     <p></p>
     <p class="text-justify">{% blocktrans %}This app uses Augmented Reality (AR) to automatically find and archive your
         media in the pre-configured folders.{% endblocktrans %}</p>
