--- a/mymwebsite/templates/howto.html
+++ b/mymwebsite/templates/howto.html
@@ -11,7 +11,7 @@
                  alt={% trans "Pinocchio sitting over a mobile phone." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Making Sure that a Photo is NOT a Fake" %}</h4>
-                <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
+                <p class="card-text">{% trans "How to do that using MyMensor???? Click and learn!!!" %}</p>
             </div>
         </div>
         <div id="followingremotejobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
@@ -19,7 +19,7 @@
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Following Jobs Remotely " %}</h4>
-                <p class="card-text">{% trans "One cannot be in more than one place at the same time, sure? Not quite, if we use the technology that is available right now!" %}</p>
+                <p class="card-text">{% trans "MyMensor will empower you to accomplish that! Follow our step by step how-to guide." %}</p>
             </div>
         </div>
         <div id="usingyourowndata" class="card m-3 card-outline-secondary" style="width: 22rem;">
@@ -27,7 +27,7 @@
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Using <u>Your</u> Own Data for <u>Your</u> Own Benefit " %}</h4>
-                <p class="card-text">{% trans "Do like all big tech corporations are doing. They are using <u>your</u> data for <u>their</u> benefit, and most of the time we cannot prevent that. <mark>But we can use our own data for our own benefit, can't we?</mark>. " %}</p>
+                <p class="card-text">{% trans "How can <u>I do that?</u> Find here a detailed guide on how MyMensor will build that for <u>YOU</u>. " %}</p>
             </div>
         </div>
     </div>
