--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -14,7 +14,7 @@
                 <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
             </div>
         </div>
-        <div id="followingremotejobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
+        <div id="followingjobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
             <img class="card-img-top img-fluid" src="{% static 'images/followingremotejobs.jpg' %}"
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
