--- a/mymwebsite/templates/howto.html
+++ b/mymwebsite/templates/howto.html
@@ -14,7 +14,7 @@
                 <p class="card-text">{% trans "How to do that using MyMensor???? Click and learn!!!" %}</p>
             </div>
         </div>
-        <div id="followingremotejobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
+        <div id="followingjobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
             <img class="card-img-top img-fluid" src="{% static 'images/followingremotejobs.jpg' %}"
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
