--- a/mymwebsite/templates/howto/followingremotejobs.html
+++ b/mymwebsite/templates/howto/followingremotejobs.html
@@ -10,11 +10,13 @@
         <p>{% trans "How to<mark> follow remote jobs using MyMensor? </mark>Do I have to tell the remote party to contract MyMensor?" %}</p>
         <p>{% trans "No! It is<mark> MUCH SIMPLER THAN THAT! </mark>" %}</p>
         <p>{% trans "You could start with your own MyMensor account, but for this example let's say that you will start by creating a brand new MyMensor account. Then after creating the new account you will create a <mark> SERVICE USER. </mark> This is a special type of user that is tied to your primary account and can <mark>ONLY CAPTURE MEDIA TO YOU</mark>, with this set of credentials this person <mark>CANNOT ACCESS</mark> your MyMensor account on the Web. Please refer to the points below for a detailed walkthrough on how to do it." %}</p>
-        <p>{% trans "<strong>1.</strong> Create a MyMensor account " %}<a
-                href='https://app.mymensor.com/accounts/register'
-                target="_blank">{% trans "here. " %}</a>{% trans "If you are already logged in to MyMensor in this computer, please logoff first, as otherwise your account will be opened automatically." %}</p>
-        <p>{% trans "<strong>2.</strong> Then you follow the usual drill here, confirm the email you used for the account and go on." %}</p>
-        <p>{% trans "<strong>3.</strong> Log in to the new account, at it is a new account and your Portfolio is empty." %}</p>
+        <p>{% trans "<strong>1.</strong> Install MyMensor Mobile app from " %}<a
+                href='https://play.google.com/store/apps/details?id=com.mymensorar&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                target="_blank">{% trans "here." %}</a></p>
+        <p>{% trans "<strong>2.</strong> Run app and create your user. Now click " %}</p><a
+                href='https://app.mymensor.com/accounts/login'
+                target="_blank">{% trans "here " %}</a><p>{% trans "and log into your account in the MyMensor WebApp. If you are already logged in to MyMensor in this computer, please logoff first, as otherwise your account will be opened automatically." %}</p>
+        <p>{% trans "<strong>3.</strong> Your Portfolio is empty, as it is a new account and you did not snap any photos or videos." %}</p>
         <p>{% trans "<strong>4.</strong> In the top right of your screen you will see the username in bold letters, click on it to open a dropdown menu. In this menu click on <strong>Service User</strong>" %}</p>
         <p>{% trans "<strong>5.</strong> Now create a password for your service user. Take note of the password you have created. Remember that MyMensor cannot access any of the passwords you create! After that MyMensor will automatically create a username for your service user, based on your own username." %}</p>
         <p>{% trans "<strong>6.</strong> So your service user is created. You can always come back at this same screen to change the current service user password or to delete the service user." %}</p>
