--- a/mymwebsite/templates/howto/usingyourowndata.html
+++ b/mymwebsite/templates/howto/usingyourowndata.html
@@ -9,7 +9,8 @@
                  alt={% trans "Man surfing the bigdata wave, in form of a dollar sign." %}>
         <p>{% trans "With MyMensor you can be sure that the media you receive is genuine, you can use service users to capture media from remote locations and deliver that to you automatically, always with confidence. But there is more to MyMensor than all that." %}</p>
         <p>{% trans "MyMensor provides you with some simple, but very efffective tools, to gather data on the field. You use the aforementioned features and with the media received you can process the data. With time you will amass a huge amount of information."%}</p>
-        <p>{% trans "Let me show you this " %}</p>
+        <p>{% trans "Let me show how you can do this!" %}</p>
+        <p>{% trans "Let me show how you can do this!" %}</p>
         <p>{% trans "MyMensor can help you accomplish that. With the use of the <mark>MyMensor Media and Data Plan</mark> you will be able to gather the data you need to form your big data. And with that you will set optimal regions of operation for your business." %}</p>
         <p>{% trans "But OK, we are getting a little bit ahead of ourselves here! Firstly, you need to " %}
             <a id="registerbtn" class="registerbtn"
