--- a/mymwebsite/templates/howto/followingremotejobs.html
+++ b/mymwebsite/templates/howto/followingremotejobs.html
@@ -13,9 +13,9 @@
         <p>{% trans "<strong>1.</strong> Install MyMensor Mobile app from " %}<a
                 href='https://play.google.com/store/apps/details?id=com.mymensorar&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                 target="_blank">{% trans "here." %}</a></p>
-        <p>{% trans "<strong>2.</strong> Run app and create your user. Now click " %}</p><a
+        <p>{% trans "<strong>2.</strong> Run app and create your user. Now click " %}<a
                 href='https://app.mymensor.com/accounts/login'
-                target="_blank">{% trans "here " %}</a><p>{% trans "and log into your account in the MyMensor WebApp. If you are already logged in to MyMensor in this computer, please logoff first, as otherwise your account will be opened automatically." %}</p>
+                target="_blank">{% trans "here " %}</a>{% trans "and log into your account in the MyMensor WebApp. If you are already logged in to MyMensor in this computer, please logoff first, as otherwise your account will be opened automatically." %}</p>
         <p>{% trans "<strong>3.</strong> Your Portfolio is empty, as it is a new account and you did not snap any photos or videos." %}</p>
         <p>{% trans "<strong>4.</strong> In the top right of your screen you will see the username in bold letters, click on it to open a dropdown menu. In this menu click on <strong>Service User</strong>" %}</p>
         <p>{% trans "<strong>5.</strong> Now create a password for your service user. Take note of the password you have created. Remember that MyMensor cannot access any of the passwords you create! After that MyMensor will automatically create a username for your service user, based on your own username." %}</p>
