--- a/mymwebsite/templates/howto/usingyourowndata.html
+++ b/mymwebsite/templates/howto/usingyourowndata.html
@@ -10,12 +10,30 @@
         <p>{% trans "With MyMensor you can be sure that the media you receive is genuine, you can use service users to capture media from remote locations and deliver that to you automatically, always with confidence. But there is more to MyMensor than all that." %}</p>
         <p>{% trans "MyMensor provides you with some simple, but very efffective tools, to gather data on the field. You use the aforementioned features and with the media received you can process the data. With time you will amass a huge amount of information."%}</p>
         <p>{% trans "Let me show how you can do this!" %}</p>
-        <p>{% trans "Let me show how you can do this!" %}</p>
-        <p>{% trans "MyMensor can help you accomplish that. With the use of the <mark>MyMensor Media and Data Plan</mark> you will be able to gather the data you need to form your big data. And with that you will set optimal regions of operation for your business." %}</p>
+        <p>{% trans "To be able to use the features we will discuss you need to be using the plan <mark>MyMensor Media and data</mark>, to be able to acces the data functions." %}</p>
+        <p>{% trans "<strong>1.</strong> Install MyMensor Mobile app from " %}<a
+                href='https://play.google.com/store/apps/details?id=com.mymensorar&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                target="_blank">{% trans "here." %}</a></p>
+        <p>{% trans "<strong>2.</strong> Run app and create your user. Now click " %}<a
+                href='https://app.mymensor.com/accounts/login'
+                target="_blank">{% trans "here " %}</a>{% trans "and log into your account in the MyMensor WebApp. If you are already logged in to MyMensor in this computer, please logoff first, as otherwise your account will be opened automatically." %}</p>
+        <p>{% trans "<strong>3.</strong> Your Portfolio is empty, as it is a new account and you did not snap any photos or videos." %}</p>
+        <p>{% trans "<strong>4.</strong> Click on <mark><strong>Setup</strong></mark> on the main menu to open a dropdown menu. In this menu click on <strong>TAGs</strong> to open the Tags configuration screen." %}</p>
+        <p>{% trans "<strong>5.</strong> You can see that there is no VP standard photo defined (To learn more about that go to the " %}<a
+                                            href="{% url 'docs' %}" class="text-primary">{% trans "DOCS section " %}</a>{% trans "of this website). So, use the mobile app and define a VP standard photo." %}</p>
+        <p>{% trans "<strong>6.</strong> Now you can define a TAG or TAGs to be created in this VP. Click on the button <strong>Add a TAG in VP#1</strong> and a new TAG will be created." %}</p>
+        <p>{% trans "<strong>7.</strong> Fill up the TAG definition, press <mark>SUBMIT</mark> and move on! Remember that TAGs values are <mark>ALWAYS</mark> numerical. So, if you want to know if a machine is On or OFF, just create a simple code like ON equals 1 and OFF equal 0. It will be nice to have it like that so you can have it at the same graph together with purelly numerical values." %}</p>
+        <p>{% trans "<strong>8.</strong> You can also mark the position of the TAG on the VP standard photo. Go and try!" %}</p>
+        <p>{% trans "<strong>9.</strong> After this is done, every capture of this VP can be processed, and a value can be attributed to the TAg you have just created. Now make some captures, just for the sake of practicing." %}</p>
+        <p>{% trans "<strong>10.</strong> Click on <mark><strong>Data</strong></mark> on the main menu to open a dropdown menu. In this menu click on <strong>Processing</strong> to open the Tags processing screen." %}</p>
+        <p>{% trans "<strong>11.</strong> Now answer the <mark>TAG QUESTION</mark> you have created in step 7 and press the <mark>SAVE</mark> button. Remember that you can always check the TAG definition for each of your captures by clicking in the small orange icon just below the captured picture." %}</p>
+        <p>{% trans "<strong>12.</strong> If you need to edit any of the values you have entered, click on <mark><strong>Data</strong></mark> on the main menu and then on <strong>Edit</strong> to open the Tags editing screen. " %}</p>
+        <p>{% trans "<strong>13.</strong> Now click on <mark><strong>Data</strong></mark> on the main menu and then on <strong>Status</strong> to open the Tags Status screen. There you will be able to see a lot of useful information regarding your TAGs as well as you will be able to download your data in CSV format by pressin the spreadsheet icon on the top right of the page." %}</p>
+        <p>{% trans "<strong>14.</strong> Now click on <mark><strong>Data</strong></mark> on the main menu and then on <strong>Analysis</strong> to open the Tags Analysis screen. There you will be able to see a chart regarding your TAGs as well as you will be able to download this chart by right-clicking it and selecting the download option." %}</p>
+        <p>{% trans "I know, we have covered a lot of ground here! With the use of the <mark>MyMensor Media and Data Plan</mark> you will be able to gather the data you need to form your big data. And with that you will set optimal regions of operation for your business." %}</p>
         <p>{% trans "But OK, we are getting a little bit ahead of ourselves here! Firstly, you need to " %}
             <a id="registerbtn" class="registerbtn"
-               href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even after you have subscribed, you can easily cancel at any time, just clicking a button!" %}
-        </p>
+               href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even after you have subscribed, you can easily cancel at any time, just clicking a button!" %}</p>
         <p>{% trans "Use your trial period to learn in our website how to setup a simple an efficient way to drive your business profits up! And, of course, drop us an email in case you need more info!" %}</p>
     </div>
 
