--- a/mymwebsite/templates/docs.html
+++ b/mymwebsite/templates/docs.html
@@ -2,7 +2,8 @@
 {% load staticfiles i18n %}
 {% block title %}Docs - {{ block.super }}{% endblock %}
 {% block content %}
-    <p></p>
+    <h1 class="mt-5 mb-5 ml-4">Docs</h1>
+    <hr>
     <h3>{% trans "Deeper Info about MyMensor" %}</h3>
     <p></p>
     <p></p>
