--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -3,9 +3,8 @@
 {% block title %}FAQ - {{ block.super }}{% endblock %}
 {% block content %}
     {% get_current_language as LANGUAGE_CODE %}
-    <div style="padding-top: 20px; padding-bottom: 20px">
-        <h3>{% trans "Frequently Asked Questions" %}</h3>
-    </div>
+    <h1 class="mt-5 mb-5 ml-4">{% trans "Frequently Asked Questions" %}</h1>
+    <hr>
     <h4>{% trans "GENERAL QUESTIONS" %}</h4>
     <div id="accordion1" role="tablist" aria-multiselectable="true">
         <div class="card">
