--- a/mymwebsite/templates/cases/followingremotejobs.html
+++ b/mymwebsite/templates/cases/followingremotejobs.html
@@ -17,5 +17,6 @@
                                                                                                         class="registerbtn"
                                                                                                         href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "Start your 30-day free-trial now. " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
         </p>
+        <p><a href="{% url 'followingremotejobshowto' %}" class="text-primary">{% trans "Liked the case? Click here to see how to do it using MyMensor! " %}</a></p>
     </div>
 {% endblock %}
