--- a/mymwebsite/templates/cases/usingyourowndata.html
+++ b/mymwebsite/templates/cases/usingyourowndata.html
@@ -24,6 +24,7 @@
                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even after you have subscribed, you can easily cancel at any time, just clicking a button!" %}
         </p>
         <p>{% trans "Use your trial period to learn in our website how to setup a simple an efficient way to drive your business profits up! And, of course, drop us an email in case you need more info!" %}</p>
+        <p><a href="{% url 'usingyourowndatahowto' %}" class="text-primary">{% trans "Liked the case? Click here to see how to do it using MyMensor! " %}</a></p>
     </div>
 
 {% endblock %}
