--- a/mymwebsite/templates/howto/genusemediaplan.html
+++ b/mymwebsite/templates/howto/genusemediaplan.html
@@ -3,7 +3,7 @@
 {% get_current_language as LANGUAGE_CODE %}
 {% block title %}{% trans "How To" %} - {{ block.super }}{% endblock %}
 {% block content %}
-    <h3 class="mt-2 mb-2 ml-2">{% trans "MyMensor Use Cases" %}</h3>
+    <h6 class="text-uppercase">{% trans "MyMensor Use Cases" %}</h6>
     <hr>
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
         <h1 class="pb-3">{% trans "Making Sure that a Photo is NOT a Fake" %}</h1>
